--- a/package.json
+++ b/package.json
@@ -10,8 +10,22 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "aos": "^2.3.4",
+    "bootstrap": "^5.3.7",
+    "emailjs-com": "^3.2.0",
+    "framer-motion": "^12.23.12",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-countup": "^6.5.3",
+    "react-dom": "^19.1.1",
+    "react-hook-form": "^7.62.0",
+    "react-icons": "^5.5.0",
+    "react-intersection-observer": "^9.16.0",
+    "react-masonry-css": "^1.0.16",
+    "react-parallax": "^3.5.2",
+    "react-router-dom": "^6.30.1",
+    "react-scroll": "^1.9.3",
+    "react-scrollspy": "^3.4.3",
+    "styled-components": "^6.1.19"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
