--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "aos": "^2.3.4",
     "bootstrap": "^5.3.7",
+    "bootstrap-icons": "^1.13.1",
     "emailjs-com": "^3.2.0",
     "framer-motion": "^12.23.12",
     "react": "^19.1.1",
